<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Lab1">


    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:text="@string/correct_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changepressure"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#D3D3D3"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pressure_threshold"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PChange" />

    <EditText
        android:id="@+id/changetemp"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#D3D3D3"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/change_temp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tchange" />

    <EditText
        android:id="@+id/pressurethresh"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#D3D3D3"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pressure_threshold"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PSet" />

    <EditText
        android:id="@+id/tempthresh"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#D3D3D3"
        android:ems="10"
        android:enabled="false"

        android:hint="@string/pressure_threshold"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TSet"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pressure_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/Tchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/temp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changepressure" />

    <TextView
        android:id="@+id/PSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pressure_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changetemp" />

    <TextView
        android:id="@+id/TSet"
        android:layout_width="148dp"
        android:layout_height="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/temp_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressurethresh" />
</androidx.constraintlayout.widget.ConstraintLayout>